--- a/Frontend/Index.html
+++ b/Frontend/Index.html
@@ -6,14 +6,38 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/index.css">
-
+  <script src="js/index.js" defer></script>
   <title>Document</title>
 </head>
 <body>
-<div class="container">
-  <div id="vasen"></div>
-  <div id="keski"></div>
-  <div id="oikea"></div>
-</div>
+    <header></header>
+    <main class="container">
+      <div id="vasen"></div>
+      <div id="keski">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aspernatur atque, culpa dignissimos dolorum
+      eius enim, eum, illum inventore laboriosam maiores neque non quidem quisquam repudiandae sit voluptatum? Laudantium.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aspernatur atque, culpa dignissimos dolorum
+      eius enim, eum, illum inventore laboriosam maiores neque non quidem quisquam repudiandae sit voluptatum? Laudantium.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aspernatur atque, culpa dignissimos dolorum
+      eius enim, eum, illum inventore laboriosam maiores neque non quidem quisquam repudiandae sit voluptatum? Laudantium.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aspernatur atque, culpa dignissimos dolorum
+      eius enim, eum, illum inventore laboriosam maiores neque non quidem quisquam repudiandae sit voluptatum? Laudantium.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aspernatur atque, culpa dignissimos dolorum
+      eius enim, eum, illum inventore laboriosam maiores neque non quidem quisquam repudiandae sit voluptatum? Laudantium.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aspernatur atque, culpa dignissimos dolorum
+      eius enim, eum, illum inventore laboriosam maiores neque non quidem quisquam repudiandae sit voluptatum? Laudantium.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aspernatur atque, culpa dignissimos dolorum
+      eius enim, eum, illum inventore laboriosam maiores neque non quidem quisquam repudiandae sit voluptatum? Laudantium.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aspernatur atque, culpa dignissimos dolorum
+      eius enim, eum, illum inventore laboriosam maiores neque non quidem quisquam repudiandae sit voluptatum? Laudantium.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aspernatur atque, culpa dignissimos dolorum
+      eius enim, eum, illum inventore laboriosam maiores neque non quidem quisquam repudiandae sit voluptatum? Laudantium.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aspernatur atque, culpa dignissimos dolorum
+      eius enim, eum, illum inventore laboriosam maiores neque non quidem quisquam repudiandae sit voluptatum? Laudantium.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aspernatur atque, culpa dignissimos dolorum
+      eius enim, eum, illum inventore laboriosam maiores neque non quidem quisquam repudiandae sit voluptatum? Laudantium.
+    </div>
+    <div id="oikea"></div>
+  </main>
 </body>
 </html>
