second layout test

--- a/Frontend/Index.html
+++ b/Frontend/Index.html
@@ -10,32 +10,16 @@
   <title>Document</title>
 </head>
 <body>
-    <header></header>
-    <main class="container">
-      <div id="vasen"></div>
-      <div id="keski">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aspernatur atque, culpa dignissimos dolorum
-      eius enim, eum, illum inventore laboriosam maiores neque non quidem quisquam repudiandae sit voluptatum? Laudantium.
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aspernatur atque, culpa dignissimos dolorum
-      eius enim, eum, illum inventore laboriosam maiores neque non quidem quisquam repudiandae sit voluptatum? Laudantium.
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aspernatur atque, culpa dignissimos dolorum
-      eius enim, eum, illum inventore laboriosam maiores neque non quidem quisquam repudiandae sit voluptatum? Laudantium.
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aspernatur atque, culpa dignissimos dolorum
-      eius enim, eum, illum inventore laboriosam maiores neque non quidem quisquam repudiandae sit voluptatum? Laudantium.
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aspernatur atque, culpa dignissimos dolorum
-      eius enim, eum, illum inventore laboriosam maiores neque non quidem quisquam repudiandae sit voluptatum? Laudantium.
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aspernatur atque, culpa dignissimos dolorum
-      eius enim, eum, illum inventore laboriosam maiores neque non quidem quisquam repudiandae sit voluptatum? Laudantium.
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aspernatur atque, culpa dignissimos dolorum
-      eius enim, eum, illum inventore laboriosam maiores neque non quidem quisquam repudiandae sit voluptatum? Laudantium.
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aspernatur atque, culpa dignissimos dolorum
-      eius enim, eum, illum inventore laboriosam maiores neque non quidem quisquam repudiandae sit voluptatum? Laudantium.
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aspernatur atque, culpa dignissimos dolorum
-      eius enim, eum, illum inventore laboriosam maiores neque non quidem quisquam repudiandae sit voluptatum? Laudantium.
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aspernatur atque, culpa dignissimos dolorum
-      eius enim, eum, illum inventore laboriosam maiores neque non quidem quisquam repudiandae sit voluptatum? Laudantium.
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aspernatur atque, culpa dignissimos dolorum
-      eius enim, eum, illum inventore laboriosam maiores neque non quidem quisquam repudiandae sit voluptatum? Laudantium.
+  <header></header>
+  <main class="container">
+    <div id="vasen"></div>
+    <div id="keski">
+      <div class="viesti"></div>
+      <div class="viesti"></div>
+      <div class="viesti"></div>
+      <div class="viesti"></div>
+      <div class="viesti"></div>
+      <div class="viesti"></div>
     </div>
     <div id="oikea"></div>
   </main>
