--- a/Frontend/ui4/add-cat.html
+++ b/Frontend/ui4/add-cat.html
@@ -21,12 +21,10 @@
         <div class="forms">
             <div class="form-wrapper">
                 <h3>Add cat</h3>
-                <form action="http://localhost:3000/cat" method="post" class="light-border"
+                <form action="http://localhost:3000/message" method="post" class="light-border"
                     enctype="multipart/form-data" id="addCatForm">
-                    <input class="light-border" type="text" name="name" placeholder="Name">
-                    <input class="light-border" type="text" name="birthdate" placeholder="Birthdate: YYYY-MM-DD">
-                    <input class="light-border" type="number" step="0.1" name="weight" placeholder="Weight">
-                    <input class="light-border" type="file" name="cat" accept="image/*" placeholder="Choose file">
+                    <input class="light-border" type="text" name="message_body" placeholder="Name">
+                    <input class="light-border" type="file" name="picture" accept="image/*" placeholder="Choose file">
                     <button class="light-border" type="submit">Upload</button>
                 </form>
             </div>
