--- a/Frontend/ui4/login.html
+++ b/Frontend/ui4/login.html
@@ -34,7 +34,8 @@
                     id="add-user-form">
                     <input class="light-border" type="text" name="name" placeholder="Name">
                     <input class="light-border" type="text" name="email" placeholder="email">
-                    <input class="light-border" type="password" name="passwd" placeholder="Password">
+                    <input class="light-border" type="password" name="password" placeholder="Password">
+                    <input class="light-border" type="file" name="profilePicture" accept="image/*" placeholder="Choose file">
                     <button class="light-border" type="submit">Save</button>
                 </form>
             </div>
