Project base complete

--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf8">
     <title>Example</title>
-    <link href="./css/ui4.css" rel="stylesheet">
+    <link href="css/ui4.css" rel="stylesheet">
 </head>
 
 <body>
@@ -35,14 +35,13 @@
                     <input class="light-border" type="text" name="name" placeholder="Name">
                     <input class="light-border" type="text" name="email" placeholder="email">
                     <input class="light-border" type="password" name="password" placeholder="Password">
-                    <input class="light-border" type="file" name="profilePicture" accept="image/*" placeholder="Choose file">
                     <button class="light-border" type="submit">Save</button>
                 </form>
             </div>
         </div>
     </div>
-    <script src="./js/serialize.js"></script>
-    <script src="./js/login.js"></script>
+    <script src="js/serialize.js"></script>
+    <script src="js/login.js"></script>
 </body>
 
 </html>
