--- a/Frontend/single.html
+++ b/Frontend/single.html
@@ -5,7 +5,7 @@
     <meta charset="utf8">
     <title>Example</title>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.5.1/mapbox-gl.css' rel='stylesheet' />
-    <link href="./css/ui4.css" rel="stylesheet">
+    <link href="css/ui4.css" rel="stylesheet">
 </head>
 
 <body>
@@ -16,11 +16,11 @@
             <div id="map"></div>
         </div>
     </div>
-    <script src="./js/check-login.js"></script>
+    <script src="js/check-login.js"></script>
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.5.1/mapbox-gl.js'></script>
-    <script src="./js/mapbox.js"></script>
-    <script src="./js/serialize.js"></script>
-    <script src="./js/single.js"></script>
+    <script src="js/mapbox.js"></script>
+    <script src="js/serialize.js"></script>
+    <script src="js/single.js"></script>
 </body>
 
 </html>
