--- a/Frontend/front.html
+++ b/Frontend/front.html
@@ -58,6 +58,11 @@
     </div>
   </div>
 </main>
+<form action="http://localhost:3000/message" method="post"
+      enctype="multipart/form-data" id="addPictureForm">
+<input id="asdss" type="file" name="picture" accept="image/*" placeholder="">
+  <button id="asdsssdd" type="submit">Lähetä</button>
+</form>
 
 <script src="js/check-login.js"></script>
 <script src="js/serialize.js"></script>
