colors and naming changes

--- a/Frontend/front.html
+++ b/Frontend/front.html
@@ -10,7 +10,9 @@
   <title>Document</title>
 </head>
 <body>
-<header></header>
+<header>
+  <div class="aluelista"><a class="aluelinkki" href="logout.html">Kirjaudu ulos</a></div>
+</header>
 <main class="container">
   <div id="vasen">
 
