--- a/Frontend/front.html
+++ b/Frontend/front.html
@@ -59,7 +59,7 @@
       <div class="aluelista"><a class="aluelinkki" href="logout.html">Kirjaudu ulos</a></div>
       <form action="http://localhost:3000/message" method="post"
             enctype="multipart/form-data" id="addPictureForm">
-        <input id="asdss" type="file" name="picture" accept="image/*" placeholder="">
+        <input id="asdss" type="file" name="picture" accept="image/*" placeholder="Valitse kuva">
         <button id="asdsssdd" type="submit">Lähetä</button>
       </form>
     </div>
