--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -11,22 +11,22 @@
     <div class="container">
         <div class="forms">
             <div class="form-wrapper" id="login-wrapper">
-                <h3>Login</h3>
+                <h3>Kirjaudu</h3>
                 <form id="login-form" class="light-border" action="http://localhost:3000/auth/login" method="post">
                     <div>
                         <label>Email:</label>
                         <input class="light-border" type="text" name="username" />
                     </div>
                     <div>
-                        <label>Password:</label>
+                        <label>Salasana:</label>
                         <input class="light-border" type="password" name="password" />
                     </div>
                     <div>
-                        <button class="light-border" type="submit">Log In</button>
+                        <button class="light-border" type="submit">Kirjaudu sisään</button>
                     </div>
                 </form>
             </div>
-            <button class="light-border" style="display: none;" id="log-out">Log out</button>
+            <button class="light-border" style="display: none;" id="log-out">Kirjaudu ulos</button>
 
             <div class="form-wrapper">
                 <h3>Register</h3>
@@ -35,7 +35,7 @@
                     <input class="light-border" type="text" name="name" placeholder="Name">
                     <input class="light-border" type="text" name="email" placeholder="email">
                     <input class="light-border" type="password" name="password" placeholder="Password">
-                    <button class="light-border" type="submit">Save</button>
+                    <button class="light-border" type="submit">Tallenna</button>
                 </form>
             </div>
         </div>
