--- a/Frontend/add-cat.html
+++ b/Frontend/add-cat.html
@@ -9,23 +9,14 @@
 
 <body>
     <div class="container">
-        <nav>
-            <ul>
-                <li><a href="front.html">Frontpage</a></li>
-                <li><a href="add-cat.html">Add cat</a></li>
-                <li><a href="modify-user.html">Modify user</a></li>
-                <li><a href="logout.html">Logout</a></li>
-            </ul>
-        </nav>
-        <hr>
         <div class="forms">
             <div class="form-wrapper">
-                <h3>Add cat</h3>
+                <h3>Lisää viesti</h3>
                 <form action="http://localhost:3000/message" method="post" class="light-border"
                     enctype="multipart/form-data" id="addCatForm">
-                    <input class="light-border" type="text" name="message_body" placeholder="Name">
-                    <input class="light-border" type="file" name="picture" accept="image/*" placeholder="Choose file">
-                    <button class="light-border" type="submit">Upload</button>
+                    <input class="light-border" type="text" name="message_body" placeholder="Viesti">
+                    <input class="light-border" type="file" name="picture" accept="image/*" placeholder="Valitse kuva">
+                    <button class="light-border" type="submit">Lataa</button>
                 </form>
             </div>
         </div>
