--- a/Frontend/modify-cat.html
+++ b/Frontend/modify-cat.html
@@ -10,20 +10,14 @@
 <body>
     <div class="container">
         <nav>
-            <ul>
-                <li><a href="front.html">Frontpage</a></li>
-                <li><a href="add-cat.html">Add cat</a></li>
-                <li><a href="modify-user.html">Modify user</a></li>
-                <li><a href="logout.html">Logout</a></li>
-            </ul>
         </nav>
         <hr>
         <div class="forms">
             <div class="form-wrapper">
                 <h3>Muokkaa viestiä</h3>
                 <form id="modCatForm" class="light-border">
-                    <input class="light-border" type="text" name="message_body" placeholder="Name">
-                    <button class="light-border" type="submit">Save changes</button>
+                    <input class="light-border" type="text" name="message_body" placeholder="Viesti">
+                    <button class="light-border" type="submit">Tallenna</button>
                 </form>
             </div>
         </div>
