removed unused code.

--- a/Frontend/modify-message.html
+++ b/Frontend/modify-message.html
@@ -15,7 +15,7 @@
         <div class="forms">
             <div class="form-wrapper">
                 <h3>Muokkaa viestiä</h3>
-                <form id="modCatForm" class="light-border">
+                <form id="modMessageForm" class="light-border">
                     <input class="light-border" type="text" name="message_body" placeholder="Viesti">
                     <button class="light-border" type="submit">Tallenna</button>
                 </form>
@@ -24,7 +24,7 @@
     </div>
     <script src="js/check-login.js"></script>
     <script src="js/serialize.js"></script>
-    <script src="js/modify-cat.js"></script>
+    <script src="js/modify-message.js"></script>
 </body>
 
 </html>
