--- a/Frontend/single.html
+++ b/Frontend/single.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="fi">
 <head>
-    <meta charset="utf8">
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Example</title>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.5.1/mapbox-gl.css' rel='stylesheet' />
     <link href="css/ui4.css" rel="stylesheet">
