--- a/Frontend/front.html
+++ b/Frontend/front.html
@@ -12,15 +12,18 @@
 <body>
 <header>
 
-  <form class="light-border" id="search-form">
-    <input class="light-border" type="text" name="message_body" placeholder="Etsi viestiä">
-    <button class="light-border" type="submit">Hae</button>
-  </form>
 
 </header>
 <main class="container">
   <div id="vasen">
 
+    <h2>Haku</h2>
+    <form id="search-form">
+      <input type="text" name="message_body" placeholder="Etsi viestiä">
+      <button type="submit">Hae</button>
+    </form>
+
+    <h2>Viestialueet</h2>
     <form action="http://localhost:3000/message/board" method="post"
           enctype="multipart/form-data" id="board-select2">
       <select name="board_id" id="select">
@@ -66,6 +69,7 @@
       <div class="aluelista"><a class="aluelinkki" href="front.html">Etusivu</a></div>
       <div class="aluelista"><a class="aluelinkki" href="modify-user.html">Muokkaa käyttäjää</a></div>
       <div class="aluelista"><a class="aluelinkki" href="logout.html">Kirjaudu ulos</a></div>
+      <h2>Lisää profiilikuva</h2>
       <form action="http://localhost:3000/user" method="post"
             enctype="multipart/form-data" id="addPictureForm">
         <input id="asdss" type="file" name="picture" accept="image/*" placeholder="Valitse kuva">
