--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -1,48 +1,55 @@
+<!doctype html>
 <html lang="fi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Example</title>
-    <link href="css/ui4.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/login.css">
+  <title>Document</title>
 </head>
 
+<header>
+
+</header>
+
 <body>
-    <div class="container">
-        <div class="forms">
-            <div class="form-wrapper" id="login-wrapper">
-                <h3>Kirjaudu</h3>
-                <form id="login-form" class="light-border" action="http://localhost:3000/auth/login" method="post">
-                    <div>
-                        <label>Email:</label>
-                        <input class="light-border" type="text" name="username" />
-                    </div>
-                    <div>
-                        <label>Salasana:</label>
-                        <input class="light-border" type="password" name="password" />
-                    </div>
-                    <div>
-                        <button class="light-border" type="submit">Kirjaudu sisään</button>
-                    </div>
-                </form>
-            </div>
-            <button class="light-border" style="display: none;" id="log-out">Kirjaudu ulos</button>
+<div class="container">
 
-            <div class="form-wrapper">
-                <h3>Register</h3>
-                <form action="http://localhost:3000/auth/register" method="post" class="light-border"
-                    id="add-user-form">
-                    <input class="light-border" type="text" name="name" placeholder="Name">
-                    <input class="light-border" type="text" name="email" placeholder="email">
-                    <input class="light-border" type="password" name="password" placeholder="Password">
-                    <button class="light-border" type="submit">Tallenna</button>
-                </form>
-            </div>
+  <div class="forms">
+    <div id="login">
+      <form id="login-form" class="form" action="http://localhost:3000/auth/login" method="post">
+        <h3>Kirjautuminen</h3>
+        <div>
+          <input type="text" name="username" placeholder="Sähköposti"/>
         </div>
+        <div>
+          <input type="password" name="password" placeholder="Salasana"/>
+        </div>
+        <div>
+          <button class="login-buttons" type="submit">Kirjaudu sisään</button>
+        </div>
+      </form>
     </div>
-    <script src="js/serialize.js"></script>
-    <script src="js/login.js"></script>
-</body>
 
+    <button style="display: none;" id="log-out">Kirjaudu ulos</button>
+
+    <div id="register">
+      <form action="http://localhost:3000/auth/register" method="post" class="form"
+            id="add-user-form">
+        <h3>Rekisteröinti</h3>
+        <input type="text" name="name" placeholder="Nimi">
+        <input type="text" name="email" placeholder="Sähköposti">
+        <input type="password" name="password" placeholder="Salasana">
+        <p class="aputeksti">(Väh. 1 iso kirjain, 8 merkkiä)</p>
+        <button class="login-buttons" type="submit">Rekisteröidy</button>
+      </form>
+    </div>
+
+  </div>
+
+</div>
+<script src="js/serialize.js"></script>
+<script src="js/login.js"></script>
+</body>
 </html>
