--- a/Frontend/front.html
+++ b/Frontend/front.html
@@ -66,9 +66,19 @@
   </div>
   <div id="oikea">
     <div class="aluevalikko">
-      <div class="aluelista"><a class="aluelinkki" href="front.html">Etusivu</a></div>
-      <div class="aluelista"><a class="aluelinkki" href="logout.html">Kirjaudu ulos</a></div>
-      <div class="aluelista"><a class="aluelinkki" href="modify-user.html">Muokkaa käyttäjää</a></div>
+
+      <div class="aluelista">
+        <a class="aluelinkki" href="front.html"><i class="fa-solid fa-house-user"></i><span class="linkkiteksti"> Etusivu</span></a>
+      </div>
+
+      <div class="aluelista">
+        <a class="aluelinkki" href="logout.html"><i class="fa-solid fa-right-from-bracket"></i><span class="linkkiteksti"> Kirjaudu ulos</span></a>
+      </div>
+
+      <div class="aluelista">
+        <a class="aluelinkki" href="modify-user.html"><i class="fa-solid fa-gear"></i><span class="linkkiteksti"> Asetukset</span></a>
+      </div>
+
       <h2>Lisää profiilikuva</h2>
       <form action="http://localhost:3000/user" method="post"
             enctype="multipart/form-data" id="addPictureForm">
