--- a/Frontend/show-message.html
+++ b/Frontend/show-message.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Example</title>
   <link rel="stylesheet" href="css/index.css">
-  <link rel="stylesheet" href="css/viestit-vastaukset.css">
+  <link rel="stylesheet" href="css/show-message.css">
   <script src="https://kit.fontawesome.com/c5e93b78b7.js" crossorigin="anonymous"></script>
 </head>
 <body>
