--- a/Frontend/show-message.html
+++ b/Frontend/show-message.html
@@ -28,6 +28,7 @@
       <label for="tekstikentta"></label>
       <textarea id="tekstikentta" name="message_body" type="text" rows="4" cols="50" placeholder="Kirjoita vastaus..."></textarea>
       <div id="input-container">
+        <label for="kuva-nappi"></label>
         <input id="kuva-nappi" type="file" name="picture" accept="image/*" placeholder="">
 
         <button class="laheta-nappi" type="submit">Lähetä</button>
