--- a/Frontend/modify-user.html
+++ b/Frontend/modify-user.html
@@ -20,9 +20,12 @@
     <div class="modify-user">
       <form class="form" id="modUserForm">
         <h3>Muokkaa tietoja</h3>
-        <input minlength="3" requiredtype="text" name="name" placeholder="Nimi">
-        <input required type="email" name="email" placeholder="Email">
-        <input required pattern="(?=.*[\p{Lu}]).{8,}" type="password" name="password"
+        <label for="nimi-kentta">Nimi</label>
+        <input id="nimi-kentta" minlength="3" required type="text" name="name" placeholder="Nimi">
+        <label for="email-kentta">Sähköposti</label>
+        <input id="email-kentta" required type="email" name="email" placeholder="Email">
+        <label for="salasana-kentta">Salasana</label>
+        <input id="salasana-kentta" required pattern="(?=.*[\p{Lu}]).{8,}" type="password" name="password"
                placeholder="Salasana">
         <p class="aputeksti">(Väh. 1 iso kirjain, 8 merkkiä)</p>
         <button class="edit-buttons" type="submit">Tallenna</button>
@@ -33,6 +36,7 @@
       <form class="form" action="http://localhost:3000/user" method="post"
             enctype="multipart/form-data" id="addPictureForm">
         <h3>Lisää profiilikuva</h3>
+        <label for="kuva">Kuva</label>
         <input id="kuva" type="file" name="picture" accept="image/*" placeholder="Valitse kuva">
         <button class="edit-buttons" type="submit">Tallenna</button>
       </form>
