Html titles and labels for inputs

--- a/Frontend/modify-user.html
+++ b/Frontend/modify-user.html
@@ -5,12 +5,16 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Example</title>
   <link href="css/modify-user.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/c5e93b78b7.js" crossorigin="anonymous"></script>
+  <title>Muokkaa tietoja</title>
 </head>
 
 <header>
   <h1>TVT21-M</h1>
+  <div class="aluelista">
+    <a class="aluelinkki" href="front.html"><i class="fa-solid fa-house-user"></i><span class="linkkiteksti"> Etusivu</span></a>
+  </div>
 </header>
 
 <body>
