--- a/Frontend/single.html
+++ b/Frontend/single.html
@@ -5,10 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Example</title>
     <link href="css/single.css" rel="stylesheet">
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.5.1/mapbox-gl.css' rel='stylesheet' />
     <script src="https://kit.fontawesome.com/c5e93b78b7.js" crossorigin="anonymous"></script>
+    <title>Kuva</title>
 </head>
 
 <header>
