--- a/Frontend/front.html
+++ b/Frontend/front.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/index.css">
   <script src="https://kit.fontawesome.com/c5e93b78b7.js" crossorigin="anonymous"></script>
-  <title>Document</title>
+  <title>TVT21-M Keskustelualue</title>
 </head>
 <body>
 <header>
