--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -6,7 +6,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/login.css">
-  <title>Document</title>
+  <title>Kirjautuminen</title>
 </head>
 
 <header>
@@ -21,28 +21,34 @@
     <div id="login">
       <form id="login-form" class="form" action="http://localhost:3000/auth/login" method="post">
         <h3>Kirjautuminen</h3>
-        <div>
-          <input type="text" name="username" placeholder="Sähköposti"/>
-        </div>
-        <div>
-          <input type="password" name="password" placeholder="Salasana"/>
-        </div>
-        <div>
+
+        <label for="email-kentta">Sähköposti</label>
+          <input id="email-kentta" type="text" name="username" placeholder="Sähköposti"/>
+
+        <label for="salasana-kentta">Salasana</label>
+          <input id="salasana-kentta" type="password" name="password" placeholder="Salasana"/>
+
           <button class="login-buttons" type="submit">Kirjaudu sisään</button>
-        </div>
+
       </form>
     </div>
 
     <button style="display: none;" id="log-out">Kirjaudu ulos</button>
 
     <div id="register">
-      <form action="http://localhost:3000/auth/register" method="post" class="form"
-            id="add-user-form">
+      <form action="http://localhost:3000/auth/register" method="post" class="form" id="add-user-form">
         <h3>Rekisteröinti</h3>
-        <input type="text" name="name" placeholder="Nimi">
-        <input type="text" name="email" placeholder="Sähköposti">
-        <input type="password" name="password" placeholder="Salasana">
-        <p class="aputeksti">(Väh. 1 iso kirjain, 8 merkkiä)</p>
+
+        <label for="nimi-kentta">Nimi</label>
+        <input id="nimi-kentta" type="text" name="name" placeholder="Nimi">
+
+        <label for="email-kentta2">Sähköposti</label>
+        <input id="email-kentta2" type="text" name="email" placeholder="Sähköposti">
+
+        <label for="salasana-kentta2">Salasana</label>
+        <input id="salasana-kentta2" type="password" name="password" placeholder="Salasana">
+        <p class="aputeksti">(Väh. 1 iso kirjain ja 8 merkkiä)</p>
+
         <button class="login-buttons" type="submit">Rekisteröidy</button>
       </form>
     </div>
